# ot-harjoitustyo

./: .coveragerc  .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  tuntikirjanpito.md  vaatimusmaarittelu.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli-kaavio.md
src/: ball.py  game.py  index.py
src/entities/: ball.py  game.py
src/tests/: ball_test.py  game_test.py
src/ui/: ui.py
