[tool.poetry]
name = "pong"
version = "0.1.0"
description = ""
authors = ["sebastian-lehto <sebastian.lehto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.3"
pytest = "^7.2.0"
pygame = "^2.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
coverage = "^6.5.0"
pylint = "^2.15.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
